--- a/src/main/resources/static/partials/courseselect.html
+++ b/src/main/resources/static/partials/courseselect.html
@@ -68,7 +68,7 @@
             <span class="text-muted text-center">Strokes</span>
         </div>
         <div class="col-xs-4">
-            <h4 class="text-center" style="margin-top: -10px;">{{currentRound.courseName}}</h4>
+            <h4 class="text-center" style="margin-top: -10px;">{{currentRound.data.courseName}}</h4>
         </div>
         <div class="col-xs-4 text-center">
             <span class="text-muted text-center">Points</span>
@@ -98,14 +98,14 @@
 <div class="row" style="font-weight: bold;">
     <div class="col-xs-3 text-center">Hole {{holeNro}}</div>
     <div class="col-xs-3 text-center">Par
-        {{currentRound.holes[holeNro].gamePar}}
-        <span class="text-muted" style="font-size: 10px;">({{currentRound.holes[holeNro].par}})</span>
+        {{currentRound.data.holes[holeNro].gamePar}}
+        <span class="text-muted" style="font-size: 10px;">({{currentRound.data.holes[holeNro].par}})</span>
     </div>
     <div class="col-xs-3 text-center">
-        {{currentRound.holes[holeNro].length}}m
+        {{currentRound.data.holes[holeNro].length}}m
     </div>
     <div class="col-xs-3 text-center">Hcp
-        {{currentRound.holes[holeNro].hcp}}
+        {{currentRound.data.holes[holeNro].hcp}}
     </div>
 </div>
 <hr/>
@@ -113,20 +113,20 @@
 <div class="row">
     <div class="col-xs-4">
         <button type="button" class="btn btn-sm btn-block btn-default"
-                ng-click="currentRound.holes[holeNro].opening = 'left'"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].opening == 'left'}">Left
+                ng-click="currentRound.data.holes[holeNro].opening = 'left'"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].opening == 'left'}">Left
         </button>
     </div>
     <div class="col-xs-4">
         <button type="button" class="btn btn-sm btn-block btn-default"
-                ng-click="currentRound.holes[holeNro].opening = 'fair'"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].opening == 'fair'}">Fair
+                ng-click="currentRound.data.holes[holeNro].opening = 'fair'"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].opening == 'fair'}">Fair
         </button>
     </div>
     <div class="col-xs-4">
         <button type="button" class="btn btn-sm btn-block btn-default"
-                ng-click="currentRound.holes[holeNro].opening = 'right'"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].opening == 'right'}">Right
+                ng-click="currentRound.data.holes[holeNro].opening = 'right'"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].opening == 'right'}">Right
         </button>
     </div>
 </div>
@@ -136,14 +136,14 @@
     </div>
     <div class="col-xs-4">
         <button type="button" class="btn btn-sm btn-block btn-default"
-                ng-click="currentRound.holes[holeNro].openingDesc = currentRound.holes[holeNro].openingDesc == 'hazard' ? null : 'hazard'"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].openingDesc == 'hazard'}">Hazard
+                ng-click="currentRound.data.holes[holeNro].openingDesc = currentRound.data.holes[holeNro].openingDesc == 'hazard' ? null : 'hazard'"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].openingDesc == 'hazard'}">Hazard
         </button>
     </div>
     <div class="col-xs-4">
         <button type="button" class="btn btn-sm btn-block btn-default"
-                ng-click="currentRound.holes[holeNro].openingDesc = currentRound.holes[holeNro].openingDesc == 'out' ? null : 'out'"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].openingDesc == 'out'}">Out
+                ng-click="currentRound.data.holes[holeNro].openingDesc = currentRound.data.holes[holeNro].openingDesc == 'out' ? null : 'out'"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].openingDesc == 'out'}">Out
         </button>
     </div>
     <div class="col-xs-2">
@@ -155,32 +155,32 @@
 <div class="row text-center">
     <div class="btn-group">
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].puts = 0"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].puts == 0}">0
+                ng-click="currentRound.data.holes[holeNro].puts = 0"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].puts == 0}">0
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].puts = 1"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].puts == 1}">1
+                ng-click="currentRound.data.holes[holeNro].puts = 1"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].puts == 1}">1
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].puts = 2"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].puts == 2}">2
+                ng-click="currentRound.data.holes[holeNro].puts = 2"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].puts == 2}">2
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].puts = 3"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].puts == 3}">3
+                ng-click="currentRound.data.holes[holeNro].puts = 3"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].puts == 3}">3
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].puts = 4"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].puts == 4}">4
+                ng-click="currentRound.data.holes[holeNro].puts = 4"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].puts == 4}">4
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].puts = 5"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].puts == 5}">5
+                ng-click="currentRound.data.holes[holeNro].puts = 5"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].puts == 5}">5
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].puts = '-'"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].puts == '-'}">-
+                ng-click="currentRound.data.holes[holeNro].puts = '-'"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].puts == '-'}">-
         </button>
     </div>
 </div>
@@ -189,44 +189,44 @@
 <div class="row text-center">
     <div class="btn-group">
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].strokes = 1"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].strokes == 1}">1
+                ng-click="currentRound.data.holes[holeNro].strokes = 1"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].strokes == 1}">1
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].strokes = 2"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].strokes == 2}">2
+                ng-click="currentRound.data.holes[holeNro].strokes = 2"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].strokes == 2}">2
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].strokes = 3"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].strokes == 3}">3
+                ng-click="currentRound.data.holes[holeNro].strokes = 3"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].strokes == 3}">3
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].strokes = 4"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].strokes == 4}">4
+                ng-click="currentRound.data.holes[holeNro].strokes = 4"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].strokes == 4}">4
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].strokes = 5"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].strokes == 5}">5
+                ng-click="currentRound.data.holes[holeNro].strokes = 5"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].strokes == 5}">5
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].strokes = 6"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].strokes == 6}">6
+                ng-click="currentRound.data.holes[holeNro].strokes = 6"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].strokes == 6}">6
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].strokes = 7"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].strokes == 7}">7
+                ng-click="currentRound.data.holes[holeNro].strokes = 7"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].strokes == 7}">7
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].strokes = 8"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].strokes == 8}">8
+                ng-click="currentRound.data.holes[holeNro].strokes = 8"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].strokes == 8}">8
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].strokes = 9"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].strokes == 9}">9
+                ng-click="currentRound.data.holes[holeNro].strokes = 9"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].strokes == 9}">9
         </button>
         <button type="button" class="btn btn-sm btn-default"
-                ng-click="currentRound.holes[holeNro].strokes = '-'"
-                ng-class="{'btn-info' : currentRound.holes[holeNro].strokes == '-'}">-
+                ng-click="currentRound.data.holes[holeNro].strokes = '-'"
+                ng-class="{'btn-info' : currentRound.data.holes[holeNro].strokes == '-'}">-
         </button>
     </div>
 </div>
@@ -266,16 +266,14 @@
 <a href="#/scorecard" class="btn btn-default btn-block">Scorecard</a>
 
 <hr/>
-<div class="row">
-    <input type="text" class="form-control" placeholder="Email"
-           ng-model="email"/>
-</div>
 
 <div class="row">
     <button type="button" class="btn btn-block btn-default"
-            ng-click="sendRound()">Email round data
+            ng-click="saveRound()">Save data
     </button>
 </div>
+
+<pre>{{currentRound | json}}</pre>
 
 </div>
 </div>
