Club selection, refactored round data collector

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -19,3 +19,8 @@
 .animate-show-hide.ng-hide-remove.ng-hide-remove-active {
     opacity:1;
 }
+
+.collapse-content {
+    border: 1px solid rgb(217,237, 247);
+    border-top: none;
+}
