--- a/src/main/resources/static/templates/rowheader.html
+++ b/src/main/resources/static/templates/rowheader.html
@@ -1,7 +1,8 @@
 <div class="rowheader row bg-info" data-toggle="collapse" data-target="{{collapseTarget}}">
     <h3 class="col-xs-6">{{title}}</h3>
-    <h3 class="col-xs-6" ng-show="array && array.length > 0">{{array.join(', ')}}</h3>
-    <h3 class="col-xs-6" ng-show="value">{{value}}</h3>
-    <h3 class="col-xs-6" ng-show="(!array || array.length == 0) && !value">-</h3>
-    </strong>
+    <h3 class="col-xs-5" ng-show="array && array.length > 0">{{array.join(', ')}}</h3>
+    <h3 class="col-xs-5" ng-show="value">{{value}}</h3>
+    <h3 class="col-xs-5" ng-show="(!array || array.length == 0) && !value">-</h3>
+    <span class="col-xs-1 glyphicon {{icon}}" style="margin-top: 15px;"
+            ng-show="showIcon"></span>
 </div>
