--- a/src/main/resources/static/templates/buttongroup.html
+++ b/src/main/resources/static/templates/buttongroup.html
@@ -1,8 +1,8 @@
 <div class="row text-center" style="margin-left: 15px; margin-right: 15px;">
     <div class="btn-group">
         <button ng-repeat="value in values" id="{{value}}" type="button" class="btn btn-sm btn-default"
-                ng-class="{'btn-primary' : (multiselect && selections.indexOf(value) != -1) || (!multiselect && selections == value)}"
-                ng-click="valueClicked(value)">{{value}}
+                ng-class="{'btn-primary' : selection == value}"
+                ng-click="selected(value)">{{value}}
         </button>
     </div>
 </div>
