--- a/src/main/resources/static/templates/clubselect.html
+++ b/src/main/resources/static/templates/clubselect.html
@@ -1,11 +1,28 @@
-<div class="row text-center" style="margin-left: 15px; margin-right: 15px;">
-    <div class="btn-group">
-        <button ng-repeat="club in clubs" id="{{club}}" type="button" class="btn btn-sm btn-default"
+<div class="text-center">
+    <div class="col-xs-12">
+        <div class="row">
+            <div class="btn-group">
+                <button ng-repeat="club in clubs" id="{{club}}" type="button" class="btn btn-sm btn-default"
 
-                ng-click="addClub(club)">{{club}}
-        </button>
-    </div>
-    <div id="clubList" ng-click="removeClub()" style="margin-top: 8px;">
-        <span ng-repeat="club in selection track by $index" style="margin-right: 15px;">{{$index +1}}: <strong>{{club}}</strong></span>
+                        ng-click="addStroke(club)">{{club}}
+                </button>
+            </div>
+        </div>
+
+        <div id="strokeList" class="row" ng-click="removeStroke()">
+            <span ng-repeat="stroke in selection track by $index"
+                  ng-class="{'label label-info' : selection.length == $index+1}"
+                  style="margin-right: 15px; font-size: 14px; color: black;"><strong>{{stroke.club}}</strong></span>
+        </div>
+
+        <div class="row" ng-repeat="(key, group) in additional">
+            <div class="btn-group">
+                <button ng-repeat="value in group" id="{{value}}" type="button" class="btn btn-sm btn-default"
+                        ng-class="{'btn-primary' : selection[selection.length - 1][key] == value}"
+                        ng-click="additionalSelected(key, value)">{{value}}
+                </button>
+            </div>
+        </div>
+
     </div>
 </div>
