--- a/src/main/resources/static/partials/courseselect.html
+++ b/src/main/resources/static/partials/courseselect.html
@@ -71,7 +71,7 @@
 
 
 <div class="animate-show-hide" ng-show="currentRound">
-    <div class="row">
+    <div class="row" style="margin-bottom: 8px;">
         <div class="col-xs-4 text-center">
             <span class="text-muted text-center">Strokes</span>
         </div>
@@ -83,20 +83,18 @@
         </div>
     </div>
     <div class="row" style="border-bottom: 1px solid lightgrey; padding-bottom: 5px;">
-        <div class="col-xs-2 text-center">
+        <div class="col-xs-3 text-center">
             <span class="lead">{{currentRound.strokes}}</span>
         </div>
-        <div class="col-xs-3">
+        <div class="col-xs-3" style="border-right: 1px solid lightgrey;">
         <span class="h3 text-center"><strong>
             {{currentRound.toPar > 0 ? "+" : ""}}{{currentRound.toPar}}</strong></span>
         </div>
-        <div class="col-xs-1 text-center" style="height: 30px;border-right: 1px solid lightgrey;"></div>
-        <div class="col-xs-1 text-center h3"></div>
         <div class="col-xs-3 text-center">
         <span class="h3 text-center"><strong>
             {{pointSpec() > 0 ? "+" : ""}}{{pointSpec()}}</strong></span>
         </div>
-        <div class="col-xs-2 text-center">
+        <div class="col-xs-3 text-center">
             <span class="lead">{{roundPoints()}}</span>
         </div>
     </div>
@@ -178,41 +176,6 @@
                     override</strong>
             </div>
         </div>
-
-        <!--
-        <rowheader title="Approach" array="currentRound.data.holes[holeNro].approach"
-               collapse-target="#approach"></rowheader>
-    <div id="approach" class="collapse text-center collapse-content"
-         ng-class="{'in' : openPart == 'approach'}">
-        <clubselector selection="currentRound.data.holes[holeNro].approach" clubs="approachClubs"
-                      callback="filled('approach')"
-                      additional="{feel: ['Fail', 'Bad', 'Ok', 'Good', 'Excellent']}"/>
-    </div>
-
-    <rowheader title="Chips" array="currentRound.data.holes[holeNro].chip" collapse-target="#chip"></rowheader>
-    <div id="chip" class="collapse row text-center collapse-content">
-        <clubselector selection="currentRound.data.holes[holeNro].chip" clubs="chipClubs"
-                      callback="filled('chip')"
-                      additional="{feel: ['Fail', 'Bad', 'Ok', 'Good', 'Excellent']}"/>
-    </div>
-
-    <rowheader title="Puts" value="currentRound.data.holes[holeNro].puts" collapse-target="#puts"></rowheader>
-
-    <div id="puts" class="collapse text-center collapse-content">
-        <groupselector values="putValues" selections="currentRound.data.holes[holeNro].puts" multiselect="false"
-                       callback="filled('puts')"></groupselector>
-    </div>
-
-    <rowheader title="Total" value="currentRound.data.holes[holeNro].strokes" collapse-target="#strokes"
-               icon="glyphicon-exclamation-sign"
-               show-icon="currentRound.data.holes[holeNro].totalsOverridden"></rowheader>
-
-    <div id="strokes" class="collapse row text-center">
-        <groupselector values="totalValues" selections="currentRound.data.holes[holeNro].strokes"
-                       multiselect="false" callback="totalsOverridden(true)"></groupselector>
-        <strong ng-show="currentRound.data.holes[holeNro].totalsOverridden" ng-click="totalsOverridden(false)">Remove
-            override</strong>
-    </div>-->
 </div>
 
 <div class="row">
@@ -246,7 +209,7 @@
 
 <hr/>
 
-<a href="#/analysis" class="btn btn-primary btn-block">Analysis</a>
+<a href="#/analysis/holes" class="btn btn-primary btn-block">Analysis</a>
 <a href="#/scorecard" class="btn btn-primary btn-block">Scorecard</a>
 
 <hr/>
