--- a/src/main/resources/static/partials/holeanalysis.html
+++ b/src/main/resources/static/partials/holeanalysis.html
@@ -1,4 +1,13 @@
 <div class="container" style="margin-left: 15px; margin-right: 15px; margin-top: 15px;">
+
+    <div class="pure-menu pure-menu-open pure-menu-horizontal"
+         style="border-bottom: 1px solid lightgrey; margin-bottom: 10px;">
+        <ul>
+            <li class="pure-menu-selected"><a href="#/analysis/holes">Holes</a></li>
+            <li><a href="#/analysis/flow">Flow</a></li>
+        </ul>
+    </div>
+
     <h4 class="text-center text-success" style="margin-top: -3px;">Opening</h4>
     <div class="row">
         <div class="col-xs-4 text-center">
