--- a/src/main/resources/static/partials/scorecard.html
+++ b/src/main/resources/static/partials/scorecard.html
@@ -18,7 +18,7 @@
                 <td>{{hole}}</td>
                 <td>{{currentRound.data.holes[hole].par}}</td>
                 <td>{{currentRound.data.holes[hole].gamePar}}</td>
-                <td><strong>{{currentRound.data.holes[hole].strokes}}</strong></td>
+                <td style="font-size: 18px;"><strong>{{currentRound.data.holes[hole].strokes}}</strong></td>
                 <td>{{currentRound.data.holes[hole].strokes ?
                     currentRound.data.holes[hole].strokes -
                     currentRound.data.holes[hole].gamePar : ""}}
