--- a/src/main/resources/static/partials/collector.html
+++ b/src/main/resources/static/partials/collector.html
@@ -1,73 +1,4 @@
 <div class="container" style="margin-left: 15px; margin-right: 15px; margin-top: 15px;" ng-swipe-left="swipeLeft()">
-<div ng-show="!currentRound" class="animate-show-hide"
-     ng-animate="animate">
-
-    <h4 class="text-center">Course</h4>
-
-    <div class="row">
-
-        <select class="form-control" ng-model="selectedClub">
-            <option value="">--- Select course ---</option>
-            <option ng-repeat="club in clubList" value="{{club}}">{{club}}</option>
-        </select>
-    </div>
-
-    <div class="row" ng-show="club != null">
-        <h4 class="text-center">Tee</h4>
-
-        <div class="btn-group" style="width: 100%;">
-            <button ng-repeat="course in club.courses" class="btn btn-default"
-                    ng-click="selectCourse(course)"
-                    style="width: 100%;"
-                    ng-class="{'btn-success' : selectedCourse == course}">
-                {{course.tee}}
-            </button>
-
-        </div>
-    </div>
-
-
-    <div class="row" ng-show="selectedCourse != null">
-        <h4 class="text-center">HCP</h4>
-
-        <div class="col-xs-2">
-            <button class="btn btn-sm btn-default" style="margin-top: 22px;"
-                    ng-click="hcpDown(1)"><<
-            </button>
-        </div>
-        <div class="col-xs-2">
-            <button class="btn btn-sm btn-default" style="margin-top: 22px;"
-                    ng-click="hcpDown(0.1)"><
-            </button>
-        </div>
-        <div class="col-xs-4">
-            <h2 class="text-center">{{hcp}}</h2>
-        </div>
-        <div class="col-xs-2">
-            <button class="btn btn-sm btn-default" style="margin-top: 22px;"
-                    ng-click="hcpUp(0.1)">>
-            </button>
-        </div>
-        <div class="col-xs-2">
-            <button class="btn btn-sm btn-default" style="margin-top: 22px;"
-                    ng-click="hcpUp(1)">>>
-            </button>
-        </div>
-    </div>
-
-    <div class="row" ng-show="selectedCourse != null">
-        <h4 class="text-center">Game HCP:</h4>
-
-        <h2 style="text-align: center;">{{gameHcp}}</h2>
-    </div>
-
-    <div class="row">
-        <button class="btn btn-block btn-hg btn-success"
-                ng-click="startRound()" ng-show="gameHcp != '-'">Let's
-            play!
-        </button>
-    </div>
-</div>
 
 
 <div class="animate-show-hide" ng-show="currentRound">
@@ -84,11 +15,11 @@
     </div>
     <div class="row" style="border-bottom: 1px solid lightgrey; padding-bottom: 5px;">
         <div class="col-xs-3 text-center">
-            <span class="lead">{{currentRound.strokes}}</span>
+            <span class="lead">{{currentRound.data.strokes}}</span>
         </div>
         <div class="col-xs-3" style="border-right: 1px solid lightgrey;">
         <span class="h3 text-center"><strong>
-            {{currentRound.toPar > 0 ? "+" : ""}}{{currentRound.toPar}}</strong></span>
+            {{currentRound.toPar > 0 ? "+" : ""}}{{currentRound.data.toPar}}</strong></span>
         </div>
         <div class="col-xs-3 text-center">
         <span class="h3 text-center"><strong>
@@ -190,35 +121,20 @@
         </button>
     </div>
 </div>
-<!--
-<div class="row">
-    <h4 class="text-center">Location</h4>
-    <div class="col-xs-4">
-        <button class="btn btn-default btn-block" ng-click="startTracking()" ng-show="position.end != null || position.start == null">Start</button>
-        <button class="btn btn-default btn-block" ng-click="stopTracking()" ng-show="position.end == null && position.start != null">Stop</button>
-    </div>
-    <div class="col-xs-4 text-center">
-        {{position.distance != null ? position.distance + "m" : "-"}}<br/>
-        <span ng-show="position.start">+/- <strong>{{position.start.accuracy}}m</strong></span>
-        +/- <strong>{{coordinates.accuracy}}m</strong>
-    </div>
-    <div class="col-xs-4">
-        <button class="btn btn-default btn-block" ng-click="updatePosition()">Update</button>
-    </div>
-</div>-->
 
 <hr/>
 
-<a href="#/analysis/holes" class="btn btn-primary btn-block">Analysis</a>
 <a href="#/scorecard" class="btn btn-primary btn-block">Scorecard</a>
 
 <hr/>
 
 <div class="row">
     <button type="button" class="btn btn-block btn-default"
-            ng-click="saveRound()">Save data
+            ng-click="completeRound()">Complete round
     </button>
 </div>
 
 </div>
 </div>
+
+        <pre>{{currentRound | json}}</pre>
