--- a/src/main/resources/static/partials/roundlist.html
+++ b/src/main/resources/static/partials/roundlist.html
@@ -4,7 +4,7 @@
     <span class="lead text-muted" ng-show="!roundHeaders || roundHeaders.length == 0">Ei tallennettuja kierroksia</span>
 
     <ul class="list-group">
-        <li class="list-group-item" ng-repeat="roundHeader in roundHeaders | orderBy:'timestamp':true">
+        <li class="list-group-item" ng-repeat="roundHeader in roundHeaders | orderBy:'timestamp':true" ng-click="open(roundHeader)">
             <strong> <span class="pull-left text-muted">{{roundHeader.timestamp | date:'dd.MM.'}}</span>
                 {{roundHeader.caption}}
                 <div class="pull-right" style="margin-left: 30px;">{{roundHeader.toPar > 0 ? "+" : ""}}{{roundHeader.toPar}}</div>
