--- a/src/main/resources/static/partials/collector.html
+++ b/src/main/resources/static/partials/collector.html
@@ -7,7 +7,7 @@
             <span class="text-muted text-center">Strokes</span>
         </div>
         <div class="col-xs-4">
-            <h4 class="text-center" style="margin-top: -10px;">{{currentRound.data.courseName}}</h4>
+            <h4 class="text-center" style="margin-top: -10px;">{{currentRound.courseName}}</h4>
         </div>
         <div class="col-xs-4 text-center">
             <span class="text-muted text-center">Points</span>
@@ -17,7 +17,7 @@
         <div class="col-xs-3 text-center">
             <span class="lead">{{currentRound.data.strokes}}</span>
         </div>
-        <div class="col-xs-3" style="border-right: 1px solid lightgrey;">
+        <div class="col-xs-3 text-center" style="border-right: 1px solid lightgrey;">
         <span class="h3 text-center"><strong>
             {{currentRound.toPar > 0 ? "+" : ""}}{{currentRound.data.toPar}}</strong></span>
         </div>
@@ -85,11 +85,12 @@
             <div class="panel-heading row" style="margin-right: 0; margin-left: 0; margin-bottom: 0;" data-toggle="collapse"
                  data-target="#puts" data-parent="#accordion">
                 <div class="col-xs-6">Puts</div>
-                <div class="col-xs-4">{{currentRound.data.holes[holeNro].puts}}</div>
+                <div class="col-xs-4">{{mapStrokes('puts')}}</div>
             </div>
             <div id="puts" class="panel-body collapse collapse-content">
-                <groupselector values="putValues" selections="currentRound.data.holes[holeNro].puts" multiselect="false"
-                               callback="filled('puts')"></groupselector>
+                <clubselector selection="currentRound.data.holes[holeNro].puts" clubs="putDistances"
+                              callback="filled('puts')"
+                              additional="{feel: ['Fail', 'Bad', 'Ok', 'Good', 'Excellent']}"/>
             </div>
         </div>
         <div class="panel panel-info">
@@ -136,5 +137,3 @@
 
 </div>
 </div>
-
-        <pre>{{currentRound | json}}</pre>
