Finished analysis rework

--- a/src/main/resources/static/partials/about.html
+++ b/src/main/resources/static/partials/about.html
@@ -4,4 +4,6 @@
     <span class="lead text-center">Version<br/><strong>{{version}}</strong></span><br/>
     <br/>
     <span class="lead text-center">Device id<br/><strong>{{deviceId}}</strong></span>
+<br/>
+    <button ng-click="clicked()">Click me</button>
 </div>
