--- a/src/main/resources/static/partials/completedround.html
+++ b/src/main/resources/static/partials/completedround.html
@@ -3,6 +3,6 @@
 
     <p>Your round data has been successfully saved and analysed.</p>
 
-    <a class="btn btn-default btn-block" href="#/overview/{{id}}">See analysis</a>
+    <a class="btn btn-default btn-block" href="#/view/{{id}}/overview">See analysis</a>
     <a class="btn btn-default btn-block" href="#/new">Start new round</a>
 </div>
