--- a/src/main/resources/static/partials/flowanalysis.html
+++ b/src/main/resources/static/partials/flowanalysis.html
@@ -1,16 +1,15 @@
-<div class="container" style="margin-top: 15px;">
+<div class="container text-center" style="margin-top: 15px;">
 
     <div class="pure-menu pure-menu-open pure-menu-horizontal"
-         style="border-bottom: 1px solid lightgrey; margin-bottom: 10px; margin-left: 30px;">
+         style="border-bottom: 1px solid lightgrey; margin-bottom: 10px;">
         <ul>
-            <li><a href="#/analysis/holes">Holes</a></li>
-            <li class="pure-menu-selected"><a href="#/analysis/flow">Flow</a></li>
+            <li><a href="#/view/{{id}}/overview">Overview</a></li>
+            <li><a href="#/view/{{id}}/holes">Holes</a></li>
+            <li class="pure-menu-selected"><a href="#/view/{{id}}/flow">Flow</a></li>
         </ul>
     </div>
 
     <div id="my-container" style="height: 400px; width: 100%; margin-bottom: 25px;">
         <cjs-line dataset="holeData" autofit="true" options="dataOptions"></cjs-line>
     </div>
-
-    <a href="#/" class="btn btn-default btn-block">Back to Round</a>
 </div>
