--- a/src/main/resources/static/partials/holeanalysis.html
+++ b/src/main/resources/static/partials/holeanalysis.html
@@ -1,59 +1,63 @@
-<div class="container" style="margin-left: 15px; margin-right: 15px; margin-top: 15px;">
+<div class="container text-center" style="margin-left: 15px; margin-right: 15px; margin-top: 15px;">
 
     <div class="pure-menu pure-menu-open pure-menu-horizontal"
          style="border-bottom: 1px solid lightgrey; margin-bottom: 10px;">
         <ul>
-            <li class="pure-menu-selected"><a href="#/analysis/holes">Holes</a></li>
-            <li><a href="#/analysis/flow">Flow</a></li>
+            <li><a href="#/view/{{id}}/overview">Overview</a></li>
+            <li class="pure-menu-selected"><a href="#/view/{{id}}/holes">Holes</a></li>
+            <li><a href="#/view/{{id}}/flow">Flow</a></li>
         </ul>
     </div>
-
-    <h4 class="text-center text-success" style="margin-top: -3px;">Opening</h4>
     <div class="row">
-        <div class="col-xs-4 text-center">
-            <strong style="font-size: 18px;">{{analysis.openings.left / analysis.openings.total | percentage:1}}</strong><br/>
-            <span class="text-muted">Left</span>
+        <div class="col-xs-3 text-center">
+            <h4 class="text-center text-success">Approach</h4>
         </div>
-        <div class="col-xs-4 text-center">
-            <strong style="font-size: 18px;">{{analysis.openings.fair / analysis.openings.total | percentage:1}}</strong><br/>
-            <span class="text-muted">Fair</span>
+        <div class="col-xs-3 text-center">
+            <strong style="font-size: 18px;">{{analysis.approach[0] | number:2}}</strong><br/>
+            <span class="text-muted">Par 3</span>
         </div>
-        <div class="col-xs-4 text-center">
-            <strong style="font-size: 18px;">{{analysis.openings.right / analysis.openings.total | percentage:1}}</strong><br/>
-            <span class="text-muted">Right</span>
+        <div class="col-xs-3 text-center">
+            <strong style="font-size: 18px;">{{analysis.approach[1] | number:2}}</strong><br/>
+            <span class="text-muted">Par 4</span>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-2">
-
-        </div>
-        <div class="col-xs-4 text-center">
-            <strong style="font-size: 18px;">{{analysis.openings.hazard / analysis.openings.total | percentage:1}}</strong><br/>
-            <span class="text-muted">Hazard</span>
-        </div>
-        <div class="col-xs-4 text-center">
-            <strong style="font-size: 18px;">{{analysis.openings.out / analysis.openings.total | percentage:1}}</strong><br/>
-            <span class="text-muted">Out</span>
-        </div>
-        <div class="col-xs-2">
-
+        <div class="col-xs-3 text-center">
+            <strong style="font-size: 18px;">{{analysis.approach[2] | number:2}}</strong><br/>
+            <span class="text-muted">Par 5</span>
         </div>
     </div>
     <hr />
     <div class="row">
         <div class="col-xs-3 text-center">
-            <h4 class="text-center text-success">To Green</h4>
+            <h4 class="text-center text-success">Chips</h4>
         </div>
         <div class="col-xs-3 text-center">
-            <strong style="font-size: 18px;">{{analysis.toGreen.3.sum / analysis.toGreen.3.total | number:2}}</strong><br/>
+            <strong style="font-size: 18px;">{{analysis.chips[0] | number:2}}</strong><br/>
             <span class="text-muted">Par 3</span>
         </div>
         <div class="col-xs-3 text-center">
-            <strong style="font-size: 18px;">{{analysis.toGreen.4.sum / analysis.toGreen.4.total | number:2}}</strong><br/>
+            <strong style="font-size: 18px;">{{analysis.chips[1] | number:2}}</strong><br/>
             <span class="text-muted">Par 4</span>
         </div>
         <div class="col-xs-3 text-center">
-            <strong style="font-size: 18px;">{{analysis.toGreen.5.sum / analysis.toGreen.5.total | number:2}}</strong><br/>
+            <strong style="font-size: 18px;">{{analysis.chips[2] | number:2}}</strong><br/>
+            <span class="text-muted">Par 5</span>
+        </div>
+    </div>
+    <hr />
+    <div class="row">
+        <div class="col-xs-3 text-center">
+            <h4 class="text-center text-success">To green</h4>
+        </div>
+        <div class="col-xs-3 text-center">
+            <strong style="font-size: 18px;">{{analysis.togreen[0] | number:2}}</strong><br/>
+            <span class="text-muted">Par 3</span>
+        </div>
+        <div class="col-xs-3 text-center">
+            <strong style="font-size: 18px;">{{analysis.togreen[1] | number:2}}</strong><br/>
+            <span class="text-muted">Par 4</span>
+        </div>
+        <div class="col-xs-3 text-center">
+            <strong style="font-size: 18px;">{{analysis.togreen[2] | number:2}}</strong><br/>
             <span class="text-muted">Par 5</span>
         </div>
     </div>
@@ -63,15 +67,15 @@
             <h4 class="text-center text-success">Puts</h4>
         </div>
         <div class="col-xs-3 text-center">
-            <strong style="font-size: 18px;">{{analysis.puts.3.sum / analysis.puts.3.total | number:2}}</strong><br/>
+            <strong style="font-size: 18px;">{{analysis.puts[0] | number:2}}</strong><br/>
             <span class="text-muted">Par 3</span>
         </div>
         <div class="col-xs-3 text-center">
-            <strong style="font-size: 18px;">{{analysis.puts.4.sum / analysis.puts.4.total | number:2}}</strong><br/>
+            <strong style="font-size: 18px;">{{analysis.puts[1] | number:2}}</strong><br/>
             <span class="text-muted">Par 4</span>
         </div>
         <div class="col-xs-3 text-center">
-            <strong style="font-size: 18px;">{{analysis.puts.5.sum / analysis.puts.5.total | number:2}}</strong><br/>
+            <strong style="font-size: 18px;">{{analysis.puts[2] | number:2}}</strong><br/>
             <span class="text-muted">Par 5</span>
         </div>
     </div>
@@ -81,18 +85,16 @@
             <h4 class="text-center text-success">Total</h4>
         </div>
         <div class="col-xs-3 text-center">
-            <strong style="font-size: 18px;">{{(analysis.average.3.sum - analysis.average.3.total) / analysis.average.3.count | number:2}}</strong><br/>
+            <strong style="font-size: 18px;">{{analysis.totals[0] | number:2}}</strong><br/>
             <span class="text-muted">Par 3</span>
         </div>
         <div class="col-xs-3 text-center">
-            <strong style="font-size: 18px;">{{(analysis.average.4.sum - analysis.average.4.total) / analysis.average.4.count | number:2}}</strong><br/>
+            <strong style="font-size: 18px;">{{analysis.totals[1] | number:2}}</strong><br/>
             <span class="text-muted">Par 4</span>
         </div>
         <div class="col-xs-3 text-center">
-            <strong style="font-size: 18px;">{{(analysis.average.5.sum - analysis.average.5.total) / analysis.average.5.count | number:2}}</strong><br/>
+            <strong style="font-size: 18px;">{{analysis.totals[2] | number:2}}</strong><br/>
             <span class="text-muted">Par 5</span>
         </div>
     </div>
-
-    <a href="#/" class="btn btn-default btn-block">Back to Round</a>
 </div>
